--- a/Makefile.tail
+++ b/Makefile.tail
@@ -37,25 +37,25 @@ $(ZBLASOBJS_P) : override CFLAGS += -DPROFILE $(COMMON_PROF)
 $(XBLASOBJS_P) : override CFLAGS += -DPROFILE $(COMMON_PROF)
 
 libs    :: $(BLASOBJS) $(COMMONOBJS)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME) $^
 
 prof    :: $(BLASOBJS_P) $(COMMONOBJS_P)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME_P) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME_P) $^
 
 hpl	:: $(HPLOBJS) $(COMMONOBJS)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME) $^
 
 hpl_p	:: $(HPLOBJS_P) $(COMMONOBJS_P)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME_P) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME_P) $^
 
 kernel :: $(BLASOBJS)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME) $^
 
 commonlibs :: $(COMMONOBJS)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME) $^
 
 commonprof :: $(COMMONOBJS_P)
-	$(AR) $(ARFLAGS) -ru $(TOPDIR)/$(LIBNAME_P) $^
+	$(AR) $(ARFLAGS) ru $(TOPDIR)/$(LIBNAME_P) $^
 
 quick : 
 	  $(MAKE) -C $(TOPDIR) libs
